sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: illegal start of simple expression
    while() j > 0 & getValue(j - 1) > x){
          ^AlgInsertionSort:15: error: ')' expected but '}' found.
  }
  ^